// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script type="application/ld+json">
  {   "json":true  }
</script>

=====================================output=====================================
<script type="application/ld+json">
  { "json": true }
</script>

================================================================================
`;

exports[`script.html 2`] = `
====================================options=====================================
htmlTopLevelIndent: "always"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script type="application/ld+json">
  {   "json":true  }
</script>

=====================================output=====================================
<script type="application/ld+json">
  { "json": true }
</script>

================================================================================
`;

exports[`script.html 3`] = `
====================================options=====================================
htmlTopLevelIndent: "never"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script type="application/ld+json">
  {   "json":true  }
</script>

=====================================output=====================================
<script type="application/ld+json">
{ "json": true }
</script>

================================================================================
`;
